// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`title component no children 1`] = `
<div
  className="sc-AxjAm beupUC"
>
  <h3 />
</div>
`;

exports[`title component normal case 1`] = `
<div
  className="sc-AxjAm beupUC"
>
  <h3>
    Text
  </h3>
</div>
`;
